# attestation-gateway

./: .dockerignore  .env.example  .envrc  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  catalog-info.yaml  cspell.json  deny.toml  docker-compose.test.yml  docker-compose.yaml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: audit.yaml  ci.yaml  relyance-sci.yml  security-scorecard-deploy.yml
attestation-gateway/: Cargo.toml
attestation-gateway-types/: Cargo.toml
attestation-gateway/src/: audience_authorizer.rs  kinesis.rs  lib.rs  main.rs  routes.rs  server.rs  utils.rs
attestation-gateway/src/android/: analytics_service.rs  android_attestation.rs  android_attestation_service.rs  android_ca_registry.rs  android_cert_chain.rs  android_revocation_list.rs  attested_key.rs  cert_chain.rs  cert_chain_builder.rs  device_certificate.rs  integrity_token_data.rs  intermediate_cert.rs  key_description.rs  keybox_defense.rs  mod.rs  rate_limit_service.rs  revocation_list.rs  root_cert.rs  root_certificate.rs  serde_hex.rs  session_cert.rs
attestation-gateway/src/android/key_description/: key_description.rs  key_description_1.rs  key_description_100.rs  key_description_2.rs  key_description_200.rs  key_description_3.rs  key_description_300.rs  key_description_4.rs  key_description_400.rs  key_description_asn1.rs  mod.rs  unordered_set_of_u64.rs
attestation-gateway/src/apple/: dynamo.rs  mod.rs  test_helpers.rs  tests.rs
attestation-gateway/src/developer/: integrity_token_data.rs  mod.rs
attestation-gateway/src/keys/: mod.rs  tests.rs
attestation-gateway/src/kms_jws/: mod.rs  tests.rs
attestation-gateway/src/nonces/: mod.rs  nonce_db.rs  token_details.rs
attestation-gateway/src/routes/: a.rs  c.rs  generate_token.rs  jwks.rs
attestation-gateway/tests/: README.md  docker-compose.test.yml  general_integration.rs  generate_token_integration.rs  jwks_integration.rs
src/: kinesis.rs  lib.rs  main.rs  routes.rs  server.rs  utils.rs
src/android/: integrity_token_data.rs  mod.rs
src/apple/: dynamo.rs  mod.rs  test_helpers.rs  tests.rs
src/challenges/: challenges_db.rs  mod.rs  token_details.rs
src/developer/: integrity_token_data.rs  mod.rs
src/keys/: mod.rs  tests.rs
src/kms_jws/: mod.rs  tests.rs
src/request_hasher/: mod.rs  test.rs
src/routes/: a.rs  generate_signature.rs  generate_token.rs  health.rs  jwks.rs
src/tools_for_humanity/: integrity_token_data.rs  mod.rs
tests/: aws-seed.sh  docker-compose.test.yml  generate_token_integration.rs  health_integration.rs  jwks_integration.rs  kms-seed.yml
types/: Cargo.toml
types/src/: lib.rs
