[workspace]
members = ["attestation-gateway", "types"]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/worldcoin/attestation-gateway"
license = "MIT"
rust-version = "1.86.0"

[workspace.dependencies]
hex = "0.4.3"
p256 = "0.13.2"
reqwest = "0.12.15"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "2.0.18"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
