[workspace]
members = ["attestation-gateway", "types"]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/worldcoin/attestation-gateway"
license = "MIT"
rust-version = "1.86.0"

[workspace.dependencies]
hex = "0.4.3"
http = "1"
p256 = "0.13"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
