[package]
name = "attestation-gateway-types"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared types for the attestation gateway."

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
