[package]
name = "attestation-gateway"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Protects app integrity."
keywords = ["integrity", "attestation", "PlayIntegrity", "DeviceCheck"]
categories = ["web-programming"]

[features]
test-helpers = []

[dependencies]
aide = { version = "0.13.5", features = ["axum", "macros", "scalar"] }
anyhow = "1.0.102"
arc-swap = "1.7"
asn1 = "0.24.1"
aws-config = "1.8.14"
aws-sdk-dynamodb = "1.107.0"
aws-sdk-kinesis = "1.101.0"
aws-sdk-kms = "1.102.0"
axum = "0.7.9"
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
ciborium = "0.2.2"
der-parser = "10.0.0"
dotenvy = "0.15.7"
eyre = "0.6.12"
hex.workspace = true
josekit = "0.10.3"
jwtk = "0.4.0"
metrics = "0.24.3"
metrics-exporter-statsd = "0.9.0"
openssl = { version = "0.10.75", features = ["vendored"] }
rand = "0.10.0"
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }
regex = "1.12.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = "0.8.22"
serde.workspace = true
serde_bytes = "0.11.19"
serde_json = "1.0.149"
thiserror.workspace = true
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["compression-br", "trace", "timeout"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt", "json"] }
uuid = { version = "1.21.0", default-features = false, features = ["v4"] }
x509-parser = "0.18.1"

[build-dependencies]
chrono = "0.4.41"

[dev-dependencies]
attestation-gateway = { path = ".", features = ["test-helpers"] }
http-body-util = "0.1.3"
hyper = "1.4.1"
mime = "0.3.17"
mockito = "1.7.0"
serial_test = "3.2.0"
tower = { version = "0.5.2", features = ["util"] }
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }

