[package]
name = "attestation-gateway-types"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared types for the attestation gateway."

[dependencies]
hex.workspace = true
p256.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
