[package]
name = "attestation-gateway-types"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared types for the attestation gateway."

[dependencies]
hex.workspace = true
http.workspace = true
p256.workspace = true
serde.workspace = true
sha2 = { version = "0.10" }
thiserror.workspace = true
